created use case and gateway
